<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomePage">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/startBlue"
        android:fitsSystemWindows="true"
        android:minHeight="?attr/actionBarSize"
        android:padding="2dp"
        android:textSize="20sp"
        app:titleMarginStart="20dp"
        app:titleTextAppearance="@style/Base.ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/grayLight">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/gohomesafely"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/toolbarText"
            android:textSize="26sp" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="285dp"
        android:layout_marginTop="35dp"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="15dp">

    <android.support.v7.widget.CardView
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:focusable="true">

        <LinearLayout
            android:id="@+id/bn_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/circlebackground1"
                android:contentDescription="@string/todo"
                android:padding="10dp"
                android:src="@drawable/ic_settings_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/about"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/grayLight" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/check_all_your_information"
                android:textColor="@color/TextLightGray" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/getMaps">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/circlebackground2"
                android:padding="10dp"
                android:src="@drawable/ic_directions_run_black_24dp"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/journey"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/grayLight" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/start_a_new_journey"
                android:textColor="@color/TextLightGray" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="285dp"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:id="@+id/getContacts">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/circlebackground3"
                    android:src="@drawable/ic_person_add_black_24dp"
                    android:padding="10dp"
                    android:contentDescription="@string/todo" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/add_follower"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grayLight"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/invite_people_to_follow_the_journey"
                    android:padding="5dp"
                    android:textColor="@color/TextLightGray"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:id="@+id/remove_followers">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/circlebackground4"
                    android:src="@drawable/ic_hourglass_empty_black_24dp"
                    android:padding="10dp"
                    android:contentDescription="@string/todo" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/edit_followers"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grayLight"
                    android:layout_margin="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/change_your_followers_list"
                    android:textColor="@color/TextLightGray" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <Button
        android:id="@+id/bn_journey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_device"
        android:visibility="gone"/>

</LinearLayout>